[gd_scene load_steps=30 format=2]

[ext_resource path="res://Editor/Scripts/editor_camera.gd" type="Script" id=1]
[ext_resource path="res://Editor/Scripts/Editor.gd" type="Script" id=2]
[ext_resource path="res://Editor/Modules/RailLogic.tscn" type="PackedScene" id=3]
[ext_resource path="res://Data/Postprocess/OutlinesPP.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Fonts/FontMedium.tres" type="DynamicFont" id=5]
[ext_resource path="res://Editor/Docks/RailBuilder/RailBuilder.tscn" type="PackedScene" id=6]
[ext_resource path="res://Editor/Docks/RailAttachments/RailAttachments.tscn" type="PackedScene" id=7]
[ext_resource path="res://Data/UI/blur.tres" type="Material" id=8]
[ext_resource path="res://Editor/Scripts/EditorHUD.gd" type="Script" id=9]
[ext_resource path="res://Editor/Modules/add_objects.gd" type="Script" id=10]
[ext_resource path="res://Editor/Modules/Content_Selector.tscn" type="PackedScene" id=11]
[ext_resource path="res://Editor/ui/icons/building.png" type="Texture" id=12]
[ext_resource path="res://Data/UI/styles/button_both.tres" type="Theme" id=13]
[ext_resource path="res://Editor/Scripts/pause_menu.gd" type="Script" id=14]
[ext_resource path="res://Editor/ui/icons/random.png" type="Texture" id=15]
[ext_resource path="res://Editor/ui/icons/star.png" type="Texture" id=16]
[ext_resource path="res://Editor/ui/size_changer.gd" type="Script" id=17]
[ext_resource path="res://Editor/ui/objects_menu/objects_menu.gd" type="Script" id=18]
[ext_resource path="res://Editor/ui/objects_menu/thumbnail_generator.tscn" type="PackedScene" id=19]
[ext_resource path="res://Editor/ui/objects_menu/filters.gd" type="Script" id=20]
[ext_resource path="res://Editor/Scripts/world_cursor.gd" type="Script" id=21]
[ext_resource path="res://Editor/ui/icons/decoration.png" type="Texture" id=22]
[ext_resource path="res://Editor/ui/icons/infrastructure.png" type="Texture" id=23]
[ext_resource path="res://Editor/ui/icons/common.png" type="Texture" id=24]
[ext_resource path="res://Editor/ui/icons/recent.png" type="Texture" id=25]
[ext_resource path="res://Editor/ui/icons/vegetation.png" type="Texture" id=26]
[ext_resource path="res://Editor/ui/objects_menu/add_rail_object_button.gd" type="Script" id=27]
[ext_resource path="res://Editor/Modules/building_settings.tscn" type="PackedScene" id=28]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 8.0
bg_color = Color( 0.223529, 0.215686, 0.25098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.34902, 0.34902, 0.34902, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 1
anti_aliasing = false

[node name="Editor" type="Spatial"]
script = ExtResource( 2 )

[node name="EditorHUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="GlobalMenu" type="VBoxContainer" parent="EditorHUD"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0

[node name="ShowSettingsButton" type="Button" parent="EditorHUD/GlobalMenu"]
margin_right = 111.0
margin_bottom = 20.0
grow_horizontal = 0
text = "Hide Settings"

[node name="HSeparator" type="HSeparator" parent="EditorHUD/GlobalMenu"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 28.0

[node name="TestTrack" type="Button" parent="EditorHUD/GlobalMenu"]
margin_top = 32.0
margin_right = 111.0
margin_bottom = 52.0
text = "Test Track"

[node name="SaveWorldButton" type="Button" parent="EditorHUD/GlobalMenu"]
margin_top = 56.0
margin_right = 111.0
margin_bottom = 76.0
text = "Save World"

[node name="ExportTrack" type="Button" parent="EditorHUD/GlobalMenu"]
margin_top = 80.0
margin_right = 111.0
margin_bottom = 100.0
text = "Export Track"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="EditorHUD/GlobalMenu"]
margin_top = 104.0
margin_right = 111.0
margin_bottom = 108.0

[node name="JumpToStation" type="MenuButton" parent="EditorHUD/GlobalMenu"]
margin_top = 112.0
margin_right = 111.0
margin_bottom = 132.0
text = "Jump To Station"
flat = false

[node name="ShowConfig" type="Button" parent="EditorHUD/GlobalMenu"]
margin_top = 136.0
margin_right = 111.0
margin_bottom = 156.0
text = "Show Config"

[node name="Settings" type="Control" parent="EditorHUD"]
anchor_left = 0.624
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.200012
margin_top = 67.0
margin_right = -7.0
margin_bottom = -11.0

[node name="TabContainer" type="TabContainer" parent="EditorHUD/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.224
custom_styles/panel = SubResource( 1 )

[node name="RailBuilder" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 6 )]
margin_left = 8.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="RailLogic" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RailAttachments" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 7 )]
visible = false
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="BuildingSettings" parent="EditorHUD/Settings/TabContainer" instance=ExtResource( 28 )]
visible = false

[node name="VSeparator" type="VSeparator" parent="EditorHUD/Settings"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -60.0
margin_right = 4.0
margin_bottom = 60.0
script = ExtResource( 17 )
drag_side = 0
target_path = NodePath("..")

[node name="ObjectName" type="Control" parent="EditorHUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -265.0
margin_right = 265.0
margin_bottom = 30.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="HBoxContainer" parent="EditorHUD/ObjectName"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -6.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectName/Name"]
margin_top = 5.0
margin_right = 102.0
margin_bottom = 19.0
grow_horizontal = 2
text = "Current Object: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="EditorHUD/ObjectName/Name"]
margin_left = 106.0
margin_right = 267.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Clear" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 271.0
margin_right = 315.0
margin_bottom = 24.0
text = "Clear"

[node name="Rename" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 319.0
margin_right = 383.0
margin_bottom = 24.0
text = "Rename"

[node name="Delete" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 387.0
margin_right = 442.0
margin_bottom = 24.0
text = "Delete"

[node name="Duplicate" type="Button" parent="EditorHUD/ObjectName/Name"]
margin_left = 446.0
margin_right = 519.0
margin_bottom = 24.0
text = "Duplicate"

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectName"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectTransform" type="Control" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_top = 30.0
margin_right = 265.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/ObjectTransform"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -5.0
margin_bottom = -3.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "x: "

[node name="x" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 19.0
margin_right = 121.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 125.0
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
text = "y: "

[node name="y" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 144.0
margin_right = 246.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label3" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 250.0
margin_top = 5.0
margin_right = 265.0
margin_bottom = 19.0
text = "z: "

[node name="z" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 269.0
margin_right = 371.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Label4" type="Label" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 375.0
margin_top = 5.0
margin_right = 412.0
margin_bottom = 19.0
text = "x rot: "

[node name="y_rot" type="SpinBox" parent="EditorHUD/ObjectTransform/HBoxContainer"]
margin_left = 416.0
margin_right = 518.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -1000.0
max_value = 1000.0
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Objects" type="PanelContainer" parent="EditorHUD"]
anchor_bottom = 1.0
margin_top = 168.0
margin_right = 241.0
margin_bottom = -45.0
script = ExtResource( 18 )
cursor_path = NodePath("../../WorldCusor")

[node name="MarginContainer" type="MarginContainer" parent="EditorHUD/Objects"]
margin_left = 7.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 34

[node name="Content" type="VBoxContainer" parent="EditorHUD/Objects/MarginContainer"]
margin_left = 34.0
margin_right = 219.0
margin_bottom = 373.0
mouse_filter = 0

[node name="Search" type="LineEdit" parent="EditorHUD/Objects/MarginContainer/Content"]
margin_right = 185.0
margin_bottom = 26.0
size_flags_horizontal = 3
clear_button_enabled = true
placeholder_text = "Search"
caret_blink = true
caret_blink_speed = 0.5

[node name="ScrollContainer" type="ScrollContainer" parent="EditorHUD/Objects/MarginContainer/Content"]
margin_top = 30.0
margin_right = 185.0
margin_bottom = 373.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="Content" type="VBoxContainer" parent="EditorHUD/Objects/MarginContainer/Content/ScrollContainer"]
margin_right = 173.0
hint_tooltip = "- Use shift to select multiple objects.
- Right-click deselects all selected objects.
- Shift+scroll wheel chooses a random object of the selected objects."
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Overlay" type="Control" parent="EditorHUD/Objects"]
margin_left = 7.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 380.0
mouse_filter = 2

[node name="Filters" type="VBoxContainer" parent="EditorHUD/Objects/Overlay"]
margin_right = 30.0
margin_bottom = 186.0
script = ExtResource( 20 )

[node name="Buildings" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_right = 30.0
margin_bottom = 22.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Buildings"
icon = ExtResource( 12 )
clip_text = true
align = 0

[node name="Vegetation" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 26.0
margin_right = 30.0
margin_bottom = 48.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Vegetation"
icon = ExtResource( 26 )
clip_text = true
align = 0

[node name="Infrastructure" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 52.0
margin_right = 30.0
margin_bottom = 74.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Infrastructure"
icon = ExtResource( 23 )
clip_text = true
align = 0

[node name="Decorative" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 78.0
margin_right = 30.0
margin_bottom = 100.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Decorative"
icon = ExtResource( 22 )
clip_text = true
align = 0

[node name="HSeparator" type="HSeparator" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 104.0
margin_right = 30.0
margin_bottom = 108.0

[node name="Favourites" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 112.0
margin_right = 30.0
margin_bottom = 134.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Favourites"
icon = ExtResource( 16 )
clip_text = true
align = 0

[node name="MostCommon" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 138.0
margin_right = 30.0
margin_bottom = 160.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Most Commonly Used"
icon = ExtResource( 24 )
clip_text = true
align = 0

[node name="MostRecent" type="Button" parent="EditorHUD/Objects/Overlay/Filters"]
margin_top = 164.0
margin_right = 30.0
margin_bottom = 186.0
rect_min_size = Vector2( 30, 0 )
toggle_mode = true
text = "Most Recently Used"
icon = ExtResource( 25 )
clip_text = true
align = 0

[node name="Random" type="Button" parent="EditorHUD/Objects/Overlay"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = 116.0
margin_right = 30.0
margin_bottom = 146.0
toggle_mode = true
text = "Random"
icon = ExtResource( 15 )
clip_text = true
align = 0
script = ExtResource( 20 )

[node name="SizeChanger" type="VSeparator" parent="EditorHUD/Objects/Overlay"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -60.0
margin_bottom = 60.0
script = ExtResource( 17 )
target_path = NodePath("../..")

[node name="ThumbnailGenerator" parent="EditorHUD/Objects" instance=ExtResource( 19 )]

[node name="AddObjects" type="Control" parent="EditorHUD"]
anchor_top = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="RailLogicMenu" type="ItemList" parent="EditorHUD/AddObjects"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 11.2063
margin_top = -152.224
margin_right = 172.206
margin_bottom = -53.2236
items = [ "Signal", null, false, "Station", null, false, "Speed Limit", null, false, "Warn Speed Limit", null, false, "Contact Point", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="EditorHUD/AddObjects"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 194.0

[node name="AddRail" type="Button" parent="EditorHUD/AddObjects/HBoxContainer"]
margin_right = 35.0
margin_bottom = 40.0
text = "Rail"

[node name="AddRailObject" type="Button" parent="EditorHUD/AddObjects/HBoxContainer"]
margin_left = 39.0
margin_right = 128.0
margin_bottom = 40.0
hint_tooltip = "Please select a rail first before adding a dependent rail object."
disabled = true
text = "Rail Objects"
script = ExtResource( 27 )

[node name="AddObjects" type="Button" parent="EditorHUD/AddObjects/HBoxContainer"]
margin_left = 132.0
margin_right = 194.0
margin_bottom = 40.0
toggle_mode = true
pressed = true
text = "Objects"

[node name="Content_Selector" parent="EditorHUD" instance=ExtResource( 11 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -114.0
margin_right = 153.5
margin_bottom = 114.0

[node name="Message" type="Panel" parent="EditorHUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -58.5
margin_right = 155.0
margin_bottom = 58.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="EditorHUD/Message"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = -40.5
margin_right = 141.0
margin_bottom = 21.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageClose" type="Button" parent="EditorHUD/Message"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -24.4898
margin_right = 22.0
margin_bottom = -4.48984
text = "Okay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="EditorHUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="EditorHUD/Pause"]
material = ExtResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="EditorHUD/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -80.5
margin_right = 163.0
margin_bottom = 80.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_right = 326.0
margin_bottom = 49.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 5 )
text = "BACK"

[node name="ExitWithoutSave" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 53.0
margin_right = 326.0
margin_bottom = 102.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 5 )
text = "EXIT_WITHOUT_SAVING"

[node name="SaveAndExit" type="Button" parent="EditorHUD/Pause/VBoxContainer"]
margin_top = 106.0
margin_right = 326.0
margin_bottom = 155.0
theme = ExtResource( 13 )
custom_fonts/font = ExtResource( 5 )
text = "SAVE_AND_EXIT"

[node name="SnapDialog" type="ConfirmationDialog" parent="EditorHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -54.5
margin_right = 150.0
margin_bottom = 54.5
window_title = "Please confirm..."
dialog_text = "Do you want to automatically correct this rail so it is drivable?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Landscape" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="."]
current = true
far = 1000.0
script = ExtResource( 1 )
control_path = NodePath("../EditorHUD/Settings")

[node name="OutlinesPP" parent="." instance=ExtResource( 4 )]
highlight_color = Color( 1, 1, 0, 1 )

[node name="WorldCusor" type="Spatial" parent="."]
script = ExtResource( 21 )

[connection signal="selected_object_changed" from="." to="EditorHUD/AddObjects" method="_on_selected_object_changed"]
[connection signal="selected_object_changed" from="." to="EditorHUD/AddObjects/HBoxContainer/AddRailObject" method="_on_selected_object_changed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/ShowSettingsButton" to="EditorHUD" method="_on_ShowSettings_pressed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/TestTrack" to="." method="_on_TestTrack_pressed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/SaveWorldButton" to="." method="_on_SaveWorldButton_pressed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/ExportTrack" to="." method="_on_ExportTrack_pressed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/JumpToStation" to="EditorHUD" method="_on_JumpToStation_pressed"]
[connection signal="pressed" from="EditorHUD/GlobalMenu/ShowConfig" to="EditorHUD" method="_on_ShowConfig_pressed"]
[connection signal="text_entered" from="EditorHUD/ObjectName/Name/LineEdit" to="EditorHUD" method="_onObjectName_text_entered"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Clear" to="EditorHUD" method="_on_ClearCurrentObject_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Rename" to="EditorHUD" method="_on_CurrentObjectRename_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Delete" to="EditorHUD" method="_on_DeleteCurrentObject_pressed"]
[connection signal="pressed" from="EditorHUD/ObjectName/Name/Duplicate" to="EditorHUD" method="_on_DuplicateObject_pressed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/x" to="EditorHUD" method="_on_x_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y" to="EditorHUD" method="_on_y_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/z" to="EditorHUD" method="_on_z_value_changed"]
[connection signal="value_changed" from="EditorHUD/ObjectTransform/HBoxContainer/y_rot" to="EditorHUD" method="_on_y_rot_value_changed"]
[connection signal="object_added" from="EditorHUD/Objects" to="." method="_on_object_added"]
[connection signal="text_changed" from="EditorHUD/Objects/MarginContainer/Content/Search" to="EditorHUD/Objects" method="_on_search_text_changed"]
[connection signal="mouse_entered" from="EditorHUD/Objects/Overlay/Filters" to="EditorHUD/Objects/Overlay/Filters" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="EditorHUD/Objects/Overlay/Filters" to="EditorHUD/Objects/Overlay/Filters" method="_on_mouse_exited"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/Buildings" to="EditorHUD/Objects" method="_on_buildings_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/Vegetation" to="EditorHUD/Objects" method="_on_vegetation_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/Infrastructure" to="EditorHUD/Objects" method="_on_infrastructure_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/Decorative" to="EditorHUD/Objects" method="_on_decorative_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/Favourites" to="EditorHUD/Objects" method="_on_favourites_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/MostCommon" to="EditorHUD/Objects" method="_on_most_common_toggled"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Filters/MostRecent" to="EditorHUD/Objects" method="_on_most_recent_toggled"]
[connection signal="mouse_entered" from="EditorHUD/Objects/Overlay/Random" to="EditorHUD/Objects/Overlay/Random" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="EditorHUD/Objects/Overlay/Random" to="EditorHUD/Objects/Overlay/Random" method="_on_mouse_exited"]
[connection signal="toggled" from="EditorHUD/Objects/Overlay/Random" to="EditorHUD/Objects" method="_on_random_toggled"]
[connection signal="item_selected" from="EditorHUD/AddObjects/RailLogicMenu" to="EditorHUD/AddObjects" method="_on_RailLogicMenu_item_selected"]
[connection signal="pressed" from="EditorHUD/AddObjects/HBoxContainer/AddRail" to="EditorHUD/AddObjects" method="_on_AddRail_pressed"]
[connection signal="pressed" from="EditorHUD/AddObjects/HBoxContainer/AddRailObject" to="EditorHUD/AddObjects" method="_on_AddRailObject_pressed"]
[connection signal="toggled" from="EditorHUD/AddObjects/HBoxContainer/AddObjects" to="EditorHUD/AddObjects" method="_on_AddObjects_toggled"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/RailLogic" method="_on_Content_Selector_resource_selected"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/RailAttachments" method="_on_Content_Selector_resource_selected"]
[connection signal="resource_selected" from="EditorHUD/Content_Selector" to="EditorHUD/Settings/TabContainer/BuildingSettings" method="_on_Content_Selector_resource_selected"]
[connection signal="pressed" from="EditorHUD/Message/MessageClose" to="." method="_on_MessageClose_pressed"]
[connection signal="hide" from="EditorHUD/Pause" to="EditorHUD/Pause" method="_on_hide"]
[connection signal="save_requested" from="EditorHUD/Pause" to="." method="_on_Pause_save_requested"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/Back" to="EditorHUD/Pause" method="_on_Back_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/ExitWithoutSave" to="EditorHUD/Pause" method="_on_ExitWithoutSave_pressed"]
[connection signal="pressed" from="EditorHUD/Pause/VBoxContainer/SaveAndExit" to="EditorHUD/Pause" method="_on_SaveAndExit_pressed"]
[connection signal="first_person_movement_started" from="Camera" to="EditorHUD/Objects" method="_on_Camera_first_person_movement_started"]
[connection signal="first_person_was_moved" from="Camera" to="EditorHUD/Objects" method="_on_first_person_was_moved"]
